# telegram-landmarks-facts-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.cursor/rules/: file_structure_document.mdc  tech_stack_document.mdc
docs/: PRD.md  implementation_plan.mdc
prompts/: 1_prd.txt  2_tech_stack_document.txt  3_file_structure_document.txt  4_implementation_plan.txt  5_cursor_agent_prompt  6_wikipedia_data_parser.txt
src/: __init__.py  bot_handlers.py  config.py  location_service.py  main.py  wikipedia_parser.py
